<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dasm.daniel.lozano.ConsultaRegistros" >

    <TextView
        android:id="@+id/tituloInsercionDeRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/consultaDeRegistros"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textIdentificadorRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Registro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|top"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/labelDni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/dni"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/labelNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombre"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/labelApellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apellidos"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/labelDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/direccion"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/labelTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/telefono"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/labelEquipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equipo"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editTextDni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

            <EditText
                android:id="@+id/editTextApellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

            <EditText
                android:id="@+id/editTextDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

            <EditText
                android:id="@+id/editTextTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

            <EditText
                android:id="@+id/editTextEquipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <ImageView
            android:id="@+id/imagePrimero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_previous" />

        <ImageView
            android:id="@+id/imageAnterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_rew" />

        <ImageView
            android:id="@+id/imageSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_ff" />

        <ImageView
            android:id="@+id/imageUltimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_next" />

    </LinearLayout>

</LinearLayout>
